--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/react": "^3.7.0",
+    "@ark-ui/react": "^4.9.2",
     "@tailwindcss/vite": "^4.0.7",
     "@xyflow/react": "^12.4.2",
     "class-variance-authority": "^0.7.1",
@@ -18,29 +18,33 @@
     "dexie": "^4.0.11",
     "dexie-react-hooks": "^1.1.7",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.292.0",
+    "lucide-react": "^0.475.0",
     "nanoid": "^5.1.0",
     "next-themes": "^0.4.4",
+    "radix-ui": "^1.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.5",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/node": "^22.13.5",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^9.8.6",
+    "autoprefixer": "^9.8.8",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
-    "postcss": "^8.5.1",
+    "postcss": "^8.5.3",
     "postcss-cli": "^11.0.0",
-    "tailwindcss": "^4.0.7",
+    "tailwindcss": "^4.0.8",
     "vite": "^6.0.5"
   }
 }
