--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,17 @@
 {
+  "files": [],
+  "references": [
+    {
+      "path": "./tsconfig.app.json"
+    }
+  ],
   "compilerOptions": {
-    "jsx": "react"
+    "baseUrl": ".",
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "jsx": "react",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   }
 }
