--- a/package.json
+++ b/package.json
@@ -11,23 +11,35 @@
   },
   "dependencies": {
     "@ark-ui/react": "^4.9.2",
+    "@rexxars/react-json-inspector": "^9.0.1",
+    "@table-library/react-table-library": "^4.1.12",
     "@tailwindcss/vite": "^4.0.7",
+    "@tanstack/react-table": "^8.21.2",
     "@xyflow/react": "^12.4.2",
     "class-variance-authority": "^0.7.1",
+    "classcat": "^5.0.5",
     "clsx": "^2.1.1",
-    "dexie": "^4.0.11",
+    "dexie": "^4.0.10",
     "dexie-react-hooks": "^1.1.7",
+    "elkjs": "^0.10.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "nanoid": "^5.1.0",
     "next-themes": "^0.4.4",
+    "pouchdb": "^9.0.0",
+    "pouchdb-adapter-idb": "^9.0.0",
     "radix-ui": "^1.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.5",
+    "react-tables": "^1.0.2",
+    "ro-crate": "^3.4.6",
+    "rxdb": "^16.8.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "ts-morph": "^25.0.1",
+    "zundo": "^2.3.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
@@ -37,9 +49,12 @@
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^9.8.8",
-    "eslint": "^9.17.0",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "postcss": "^8.5.3",
