--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "postcss": "^8.5.3",
     "postcss-cli": "^11.0.0",
     "tailwindcss": "^4.0.8",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vitest": "^3.1.1"
   }
 }
