--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@eslint/js": "^9.17.0",
+    "@eslint/js": "^9.23.0",
     "@types/node": "^22.13.5",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
@@ -51,15 +51,16 @@
     "autoprefixer": "^9.8.8",
     "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-react-refresh": "^0.4.16",
-    "globals": "^15.14.0",
+    "globals": "^15.15.0",
     "postcss": "^8.5.3",
     "postcss-cli": "^11.0.0",
     "tailwindcss": "^4.0.8",
+    "typescript-eslint": "^8.29.0",
     "vite": "^6.0.5",
     "vitest": "^3.1.1"
   }
