--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ark-ui/react": "^4.9.2",
+    "@reduxjs/toolkit": "^2.6.1",
     "@rexxars/react-json-inspector": "^9.0.1",
     "@table-library/react-table-library": "^4.1.12",
     "@tailwindcss/vite": "^4.0.7",
@@ -32,6 +33,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "react-tables": "^1.0.2",
     "ro-crate": "^3.4.6",
@@ -39,11 +41,12 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "ts-morph": "^25.0.1",
+    "xmlbuilder2": "^3.1.1",
     "zundo": "^2.3.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@eslint/js": "^9.23.0",
+    "@eslint/js": "^9.24.0",
     "@types/node": "^22.13.5",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
@@ -53,7 +56,7 @@
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.15.0",
